# codecarbon

./: .gitignore  README.md
adaptors/libcodecarbon/: CMakeLists.txt  README.md  carboneye.c  libcodecarbon.c  libcodecarbon.h  libcodecarbon.h~  test_libcodecarbon.c
examples/: empty_test.py
